objects/Capital_Call__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capital_Call_Limit__c</fullName>
        <label>Capital Call Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_Call_Satisfy_Schedule_Requirements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Call Satisfy Schedule Requirements?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_AM_Fundraising_Oppty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fundraising Oppty</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Capital Calls</relationshipLabel>
        <relationshipName>Capital_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fund_Agreement_Default_Provisions__c</fullName>
        <label>Fund Agreement Default Provisions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Forfeiture</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Calling The Entire Commitment</fullName>
                </value>
                <value>
                    <fullName>Sale of Interest</fullName>
                </value>
                <value>
                    <fullName>Withholding Against Future Distributions</fullName>
                </value>
                <value>
                    <fullName>Loaning of the Commitment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Capital Calls</relationshipLabel>
        <relationshipName>Capital_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Capital Calls</relationshipLabel>
        <relationshipName>Capital_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LPA__c</fullName>
        <label>LPA</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Notice_Period__c</fullName>
        <label>Notice Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Details__c</fullName>
        <label>Payment Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Investor Notified</fullName>
                </value>
                <value>
                    <fullName>Capital Collected</fullName>
                </value>
                <value>
                    <fullName>Forfeiture/Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Unfunded_Capital_Called_For__c</fullName>
        <label>% of Unfunded Capital Called For</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Capital Call</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Platinum_Capital_Calls</fullName>
        <columns>NAME</columns>
        <columns>Investor__c</columns>
        <columns>Amount__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Fund__c</columns>
        <filterScope>Mine</filterScope>
        <label>Platinum Capital Calls</label>
    </listViews>
    <nameField>
        <label>Capital Call Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capital Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>